# template

./: .gitignore  README.md
algorithm/: CMakeLists.txt  ants.cc  drawing.cc  fibonacci.cc  lake_counting.cc  partial_sum.cc  triangle.cc
algorithm/test/: test.sh
algorithm/test/lake_counting/: input00.txt  input01.txt  input03.txt  input04.txt
nlp/: CMakeLists.txt  common.h  util.cc  util.h  util_test.cc
nlp/unicode/: common.h
